# GroupAppeals

./: .gitignore  DOCUMENTATION.md  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
groupappeals/: __init__.py  classifymeaningfulgroups.py  cli.py  device_utilities.py  extractgrouptoken.py  fullpipeline.py  policydetection.py  pre_and_post_processing.py  stancedetection.py
